--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "plugins/node-package-rehash"]
 	path = plugins/node-package-rehash
 	url = https://github.com/nodenv/nodenv-package-rehash.git
+[submodule "plugins/nodenv-default-packages"]
+	path = plugins/nodenv-default-packages
+	url = git@github.com:nodenv/nodenv-default-packages.git
